src/objects/Edu_Activity_to_Cert_Mapping__mdt.object
<CustomObject>
    <description>Used to identify which edu activities map directly to what certifications</description>
    <fields>
        <fullName>CSOD_ID__c</fullName>
        <description>Cornerstone ID of the event,session,or test that can grant certifications</description>
        <inlineHelpText>Cornerstone ID of the event,session,or test that can grant certifications</inlineHelpText>
        <label>CSOD_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cert_Name__c</fullName>
        <description>long text version of cert name</description>
        <label>Cert Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cert_Type__c</fullName>
        <description>Determines which cert type when querying</description>
        <label>Cert Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst</fullName>
                    <default>true</default>
                    <label>Analyst</label>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDU_Activity_Name__c</fullName>
        <label>EDU Activity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_abbv__c</fullName>
        <description>short abbreviation for cert name</description>
        <label>Name abbv</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_More_Link__c</fullName>
        <description>link to navigate to the microstrategy corporate site to find out information about the certification</description>
        <inlineHelpText>link to navigate to the microstrategy corporate site to find out information about the certification</inlineHelpText>
        <label>View More Link</label>
        <type>Url</type>
    </fields>
    <label>Edu Activity to Cert Mapping</label>
    <pluralLabel>Edu Activity to Cert Mappings</pluralLabel>
</CustomObject>